[package]
name = "webserver01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

# Axum
axum = "0.7.5"
tower-http = {version = "0.5", features = ["fs"]}
tower-cookies = "0.10"

# Serde
serde = { version = "1", features = ["derive"]}
serde_json = "1"

# Others
lazy-regex = "2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
